<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CaracteristicasServicio">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inttipo" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fisica" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semifisica" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intranngo" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/hasta" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cerotres"
            tools:checkedIconTint="#3F51B5" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ceroseis"
            app:checkedIconTint="#3F51B5" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unodos"
            app:checkedIconTint="#3F51B5" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masdos"
            app:checkedIconTint="#3F51B5" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscarcat" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tienda" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gestion" />

    </RadioGroup>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente" />

</LinearLayout>